# comicforge

./: .gitignore  AGENT.md  CLAUDE.md  README.md  poe_tasks.toml  pyproject.toml
.claude/skills/: comicforge
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
characters/bara/: character.yaml
characters/tom/: character.yaml
comicforge/: __init__.py  bubbles.py  cli.py  inspire.py  library.py  pixelart.py  render.py  scaffold.py  scene.py  validate.py
docs/: authoring-guide.md  starting-a-project.md
examples/: README.md  README.md.old
examples/pes/: references.yaml  theme.yaml
examples/pes/characters/bara/: character.yaml
examples/pes/characters/bara/poses/sit/: pose.yaml
examples/pes/characters/bara/poses/walk/: pose.yaml
examples/pes/characters/tom/: character.yaml
examples/pes/pages/: dvur-scene.yaml  kosticka.yaml  slepice.yaml
examples/pes/pixel/: bone.yaml  sun.yaml
examples/pes/scenes/dvur/: scene.yaml
examples/pes/scenes/pokoj/: scene.yaml
examples/slepice/: page.yaml
projects/dvur-scene/: scene.yaml
projects/kosticka/: page.yaml
projects/slepice/: page.yaml
skills/comicforge/: SKILL.md  reference.md
tests/: conftest.py  test_bubbles.py  test_cli.py  test_inspire.py  test_library.py  test_pixelart.py  test_render.py  test_scaffold.py  test_scene.py  test_validate.py
tools/: make_assets.py
