[project]
name = "comicforge"
version = "0.1.0"
description = "A tiny, scriptable comic-page engine — author comics as YAML, render to SVG / PNG / PDF"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cairosvg>=2.7",
    "pyyaml>=6.0",
]

[project.scripts]
comicforge = "comicforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["comicforge"]

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest",
    "pytest-cov",
    "vulture",
    "deptry",
    "poethepoet",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "DTZ", "T20", "PTH", "ERA", "PL", "TRY", "RUF", "S", "PERF", "FURB"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "PLR0913", "S"]

[tool.ruff.format]

[tool.ty]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=comicforge --cov-report=term-missing"

[tool.coverage.run]
source = ["comicforge"]

[tool.coverage.report]
show_missing = true

[tool.vulture]
paths = ["comicforge"]
min_confidence = 80

[tool.poe]
include = "poe_tasks.toml"
