[project]
name = "comicforge"
version = "0.0.1"
description = "A tiny, scriptable comic-page engine — author comics as YAML, render to SVG / PNG / PDF"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cairosvg>=2.7",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
# `comicforge inspire` — generate reference images via the Replicate API.
# python-dotenv is optional convenience; the command falls back to os.environ.
inspire = [
    "replicate>=1.0",
    "python-dotenv>=1.0",
]

[project.scripts]
comicforge = "comicforge.cli:main"
cmf = "comicforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["comicforge"]

# Ship the authoring skill inside the wheel so `cmf init` can drop it into a
# scaffolded project. Lands at comicforge/_skill/ (see scaffold.skill_src).
[tool.hatch.build.targets.wheel.force-include]
"skills/comicforge" = "comicforge/_skill"

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest",
    "pytest-cov",
    "vulture",
    "deptry",
    "biston>=0.5.0",
    "poethepoet",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "DTZ", "T20", "PTH", "ERA", "PL", "TRY", "RUF", "S", "PERF", "FURB"]
ignore = [
    # Messages are unique, dynamic f-strings; a custom exception class per site
    # would be noise, not clarity.
    "TRY003",
    # The geometry/placement/render functions legitimately take many positional
    # coordinate args (cx, cy, w, h, …); splitting them hurts readability.
    "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "PLR0913", "S"]

[tool.ruff.format]

[tool.ty]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=comicforge --cov-report=term-missing"

[tool.coverage.run]
source = ["comicforge"]

[tool.coverage.report]
show_missing = true

[tool.deptry.package_module_name_map]
# `inspire` extra: deptry can't infer the module name without the extra installed.
python-dotenv = ["dotenv"]

[tool.vulture]
paths = ["comicforge"]
min_confidence = 80

[tool.poe]
include = "poe_tasks.toml"
